--- a/Formative_Assignment_PCA_[name_of_student].ipynb
+++ b/Formative_Assignment_PCA_[name_of_student].ipynb
@@ -49,7 +49,7 @@
         "#import necessary package\n",
         "#TO DO\n",
         "import numpy as np\n",
-        "from numpy.linalg import eig\n"
+        "from numpy.linalg import \n"
       ],
       "metadata": {
         "id": "UTntK0eUNimH"
